--- a/2.html
+++ b/2.html
@@ -8,7 +8,7 @@
   <h1><a href="index.html">FC LiverPool</a></h1>
   <ol>
     <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS></a></li>
+    <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
   <h2>css</h2>
