--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <li><a href="2.html">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
-  <h2>fuck that</h2>
-  <P>Fuck fucking fucked fucker fucking fuckups fuck fucking fucked fucking fuckup fucking fucker's fuck
+  <h2>LOVE</h2>
+  <P>Look at you kids with your vintage music
+     Comin' through satellites while cruisin'
+     You're part of the past, but now you're the future
+     Signals crossing can get confusing
 </p>
 </body>
 </html>
