--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!doctype html>
 <html>
 <head>
-  <title>fuck that</title>
-  <meta charset="utf-8">
+<title>Liverpool F.C</title>
+<meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">FC LiverPool</a></h1>
+  <h1><a href="index.html">LiverPool F. C</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">Stadium</a></li>
+    <li><a href="2.html">Support</a></li>
+    <li><a href="3.html">Ownership an d finances</a></li>
   </ol>
-  <h2>LOVE</h2>
-  <P>Look at you kids with your vintage music
-     Comin' through satellites while cruisin'
-     You're part of the past, but now you're the future
-     Signals crossing can get confusing
-</p>
+  <h2>LiverPool</h2>
+  <p><a href="https://www.liverpoolfc.com" target="_blank" title="html5 speicification">LverPool FC</a> was founded following a dispute between the Everton committee and John Houlding, club president and owner of the land at Anfield. After eight years at the stadium, Everton relocated to Goodison Park in 1892 and Houlding founded Liverpool FC to play at Anfield. Originally named Everton FC and Athletic Grounds Ltd Everton Athletic for short the club became Liverpool FC in March 1892 and gained official recognition three months later after The Football Association refused to recognise the club as Everton.The team won the Lancashire League in its début season, and joined the <strong><U>Football League</U> Second Division</strong> at the start of the 1893 94 season. After finishing in first place the club was promoted to the First Division, which it won in 1901 and again in 1906 Liverpool reached its first FA Cup Final in 1914, losing 1 0 to Burnley. It won consecutive League championships in 1922 and 1923, but did not win another trophy until the 1946 47 season, when the club won the First Division for a fifth time under the control of ex-West Ham Utd centre half George Kay.
+  <img src="liverpoolhome.jpg" width="100%">
+  </p><p style="margin-top:45px">Liverpool suffered its second Cup Final defeat in 1950, playing against Arsenal.The club was relegated to the Second Division in the 1953 54 season. Soon after Liverpool lost 2 1 to non-league Worcester City in the 1958 59 FA Cup, Bill Shankly was appointed manager. Upon his arrival he released 24 players and converted a boot storage room at Anfield into a room where the coaches could discuss strategy; here, Shankly and other "Boot Room" members Joe Fagan, Reuben Bennett, and Bob Paisley began reshaping the team.
+  </p>
 </body>
 </html>
