--- a/1.html
+++ b/1.html
@@ -1,22 +1,19 @@
 <!doctype html>
 <html>
 <head>
-  <title>FC LiverPool</title>
-  <meta charset="utf-8">
+<title>Liverpool F.C</title>
+<meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">FC LiverPool</a></h1>
+  <h1><a href="index.html">LiverPool F. C</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">Stadium</a></li>
+    <li><a href="2.html">Support</a></li>
+    <li><a href="3.html">Ownership an d finances</a></li>
   </ol>
   <h2>LiverPool</h2>
-  <P><a href="https://www.transfermarkt.com/jurgen-klopp/profil/trainer/118" target="_blank" title="html5 speicification"><strong>Jürgen Klopp</strong></a> and Joe <strong>Gomez</strong> previewed the Champions League fixture against Paris Saint-Germain at a press conference on Tuesday evening.
-  The Reds face the Ligue 1 side on Wednesday night in the <u>penultimate</u> match of Group.
-  <img src="liverpool.jpg" width="100%">
-  </P><p style="margin-top:45px;">which currently has four teams separated by only two points.
-  See everything Klopp and Gomez had to say about the tie via our official YouTube channel below.
-</p>
+  <p>
+    Anfield was built in 1884 on land adjacent to Stanley Park. It was originally used by Everton before the club moved to Goodison Park after a dispute over rent with Anfield owner John Houlding.[56] Left with an empty ground, Houlding founded Liverpool in 1892 and the club has played at Anfield ever since. The capacity of the stadium at the time was 20,000, although only 100 spectators attended Liverpool's first match at Anfield.
+  </p>
 </body>
 </html>
