--- a/2.html
+++ b/2.html
@@ -1,20 +1,19 @@
 <!doctype html>
 <html>
 <head>
-  <title>FC LiverPool-css</title>
-  <meta charset="utf-8">
+<title>Support</title>
+<meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">FC LiverPool</a></h1>
+  <h1><a href="index.html">LiverPool F. C</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">Stadium</a></li>
+    <li><a href="2.html">Support</a></li>
+    <li><a href="3.html">Ownership an d finances</a></li>
   </ol>
-  <h2>css</h2>
-  <P>CSS is a language that describes the style of an HTML document.
-     CSS describes how HTML elements should be displayed.
-     This tutorial will teach you CSS from basic to advanced.
-</p>
+  <h2>Support</h2>
+  <p>
+    Liverpool is one of the best supported clubs in the world.[5][71] The club states that its worldwide fan base includes more than 200 officially recognised Club of the LFC Official Supporters Clubs in at least 50 countries. Notable groups include Spirit of Shankly.[72] The club takes advantage of this support through its worldwide summer tours,[73] which has included playing in front of 101,000 in Michigan, U.S., and 95,000 in Melbourne, Australia.[74][75] Liverpool fans often refer to themselves as Kopites, a reference to the fans who once stood, and now sit, on the Kop at Anfield.[76] In 2008 a group of fans decided to form a splinter club, A.F.C. Liverpool, to play matches for fans who had been priced out of watching Premier League football.[77]
+  </p>
 </body>
 </html>
