--- a/3.html
+++ b/3.html
@@ -1,20 +1,19 @@
 <!doctype html>
 <html>
 <head>
-  <title>FC LiverPool-JavaScript</title>
-  <meta charset="utf-8">
+<title>Ownership an d finances</title>
+<meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">FC LiverPool</a></h1>
+  <h1><a href="index.html">LiverPool F. C</a></h1>
   <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="1.html">Stadium</a></li>
+    <li><a href="2.html">Support</a></li>
+    <li><a href="3.html">Ownership an d finances</a></li>
   </ol>
-  <h2>JavaScript</h2>
-  <P>JavaScript is the programming language of HTML and the Web.
-     JavaScript is easy to learn.
-     This tutorial will teach you JavaScript from basic to advanced.
-</p>
+  <h2>Ownership an d finances</h2>
+  <p>
+    As the owner of Anfield and founder of Liverpool, John Houlding was the club's first chairman, a position he held from its founding in 1892 until 1904. John McKenna took over as chairman after Houlding's departure.[98] McKenna subsequently became President of the Football League.[99] The chairmanship changed hands many times before John Smith, whose father was a shareholder of the club, took up the role in 1973. He oversaw the most successful period in Liverpool's history before stepping down in 1990.[100] His successor was Noel White who became chairman in 1990.[101] In August 1991 David Moores, whose family had owned the club for more than 50 years became chairman. His uncle John Moores was also a shareholder at Liverpool and was chairman of Everton from 1961 to 1973. Moores owned 51 percent of the club, and in 2004 expressed his willingness to consider a bid for his shares in Liverpool.[102]
+  </p>
 </body>
 </html>
